name:                riker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chrisdone/riker#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2015 Chris Done
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Riker
  build-depends:       base >= 4.7 && < 5, wai, warp, http-client, http-conduit, http-types, bytestring, text, containers, mtl, unordered-containers
  default-language:    Haskell2010

executable riker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , riker
                     , optparse-simple, optparse-applicative, text
                     , http-client, warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/riker
